       See man page syslog(3) for more detailes.
   unix_sock = "/tmp/ser.sock"
       The name of the socket the unixsock server should listen on.
   unix_sock_children = 1
       The number of children that will listen on the unix domain socket.
   unix_tx_timeout = 2000
       Timeout (in ms) used when sending replies through unix sockets.
 - new script commands:
   force_tcp_alias()
   force_tcp_alias(port)
       adds a tcp port alias for the current connection (if tcp).
       Usefull if you want to send all the trafic to port_alias through
       the same connection this request came from [it could help 
       for firewall or nat traversal].
       With no parameters adds the port from the message via as the alias.
       When the "aliased" connection is closed (e.g. it's idle for too
       much time), all the port aliases are removed.
       Note: by default ser closes idle connection after 3 minutes (stable)
       or 1 minute (unstable) so to take full advantage of tcp aliases for
       things like firewall and nat traversal, redefine TCP_CON_*TIMEOUT
       in tcp_conn.h and recompile. Also right now there can be maximum
       3 port aliases to a connection (you shouldn't need more than one).
       To change this redefine TCP_CON_MAX_ALIASES in the same file
       (set it to you desired value + 1; 1 is needed for the real port).
   load_avp( "uri_type", "attribute", use_domain)
   load_avp( "uri_type", use_domain)
       load from database one or more attributes; uri_type tells from where
       the username should be taken (can be "ruri", "from", "to"); use_domain
       can be 0 or non-zero - if non-zero, domain will be used along the
       username for identifing the attribute into DB; if no attribute is given,
       all atributes for the given user will be loaded.
       Functions return false is they failed (error) or if no avp was loaded.
utilities:
 - ngrep patch for displaying new lines in captured SIP messages is no longer