@@ -80,6 +80,12 @@ route{
 		sl_send_reply("513", "Message too big");
 		break;
 	};
+	
+	if (src_ip==193.175.135.0/24){
+		force_send_socket(smaug:5080);
+		forward(193.175.135.179);
+		break;
+	}
 
 	# we record-route all messages -- to make sure that
 	# subsequent messages will go through our proxy; that's
