@@ -75,11 +75,12 @@ enum { FORWARD_T=1, SEND_T, DROP_T, LOG_T, ERROR_T, ROUTE_T, EXEC_T,
 		SET_ADV_PORT_T,
 		FORCE_TCP_ALIAS_T,
 		LOAD_AVP_T,
-		AVP_TO_URI_T
+		AVP_TO_URI_T,
+		FORCE_SEND_SOCKET_T
 };
 enum { NOSUBTYPE=0, STRING_ST, NET_ST, NUMBER_ST, IP_ST, RE_ST, PROXY_ST,
 		EXPR_ST, ACTIONS_ST, CMDF_ST, MODFIXUP_ST, URIHOST_ST, URIPORT_ST,
-		MYSELF_ST, STR_ST };
+		MYSELF_ST, STR_ST, SOCKID_ST, SOCKETINFO_ST };
 
 	
 struct expr{
